modify tag comment floating window, add profile edit tag delete hover

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -228,6 +228,7 @@ footer
         align-content: center
         justify-content: flex-start
         align-items: center
+        cursor: pointer
                 
         width: 14vw
         background-color: white
