--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -244,18 +244,26 @@ footer
             font-size: 0.9vw
             margin: 0 0.5vw
             padding: 0.3vw
+            text-align: center
+          .deletetag
+            position: absolute
+            display: none
+            transform: translate(-50%, -100%)
+            left: 50%
+            margin: 0
+            padding: 0.3vw 0
+            font-weight: 900
+            color: #555555
             
-          
-          .tag-style:hover
-            background-color: #FFAD94
-            .tag-commend
-              display: flex
+            
             
           .tag-style
-            min-width: 5vw
+            position: relative
+            min-width: 4vw
             background-color: #FFCFBF
             border-radius: 1vw
-            margin-right: 0.5vw
+            margin: 0.2vw
+            cursor: pointer
 
             .tag-commend
               display: none
