modify some probs

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -176,6 +176,7 @@ footer
         #school-info
           display: flex
           flex-direction: row
+          align-items: center
           margin-bottom: 5%
           color: #555555
           #department
