--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -350,6 +350,7 @@ footer
   backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
   -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
   z-index: 6
+  opacity: 0
 
 #eventwindow
   display: none
@@ -370,6 +371,7 @@ footer
   border: 5px solid rgba(58, 237, 194, 0.5)
   box-shadow: 10px 10px 25px 5px #00000026
   z-index: 7
+  opacity: 0
   
     
   #eventwindow-left
@@ -709,6 +711,7 @@ footer
   border-radius: 3vw
   border: 5px solid #FFAD94
   box-shadow: 10px 10px 25px 5px #00000026
+  opacity: 0
   z-index: 7
       
   #exitbtn2
