--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -49,6 +49,11 @@ body
   width: 200px
   height: 200px
 
+#world
+  position: fixed
+  z-index: -1
+  top: 0
+
 #background-element
   span
     border-radius: 50%
