--- a/templates/login.pug
+++ b/templates/login.pug
@@ -1,6 +1,6 @@
 {% load static %}
-doctype html                                               
-html                                            
+doctype html
+html
   head
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1", name="viewport")                 
@@ -61,7 +61,7 @@ html
             input#sign-up-btn(value="註冊", type="submit")
             p or
             p#login 登入
-
+    canvas#world
     #background-element
       //-
         #bubbles
