modify force directed graph

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -25,6 +25,7 @@ html
       #errorfilter
   
     #container
+      #graph
       #create
         {% if request.user.is_authenticated %}
         
@@ -44,7 +45,6 @@ html
         
 
       #board
-        //canvas#relation_graph
         #divider
           hr#line1.line
           form
