tag-commit/profile.js ; jqeury.js*3

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -101,7 +101,7 @@ footer
   top: 10%
   left: 50%
   bottom: 0%
-  background-color: #FFF6ED
+  background:rgba(0,255,204,0)
   margin: 5vw auto 5vw auto
 
   #create
