--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -176,30 +176,25 @@ footer
         #school-info
           display: flex
           flex-direction: row
-          align-items: center
           margin-bottom: 5%
           color: #555555
           #department
             font-size: 1.2vw
             margin-right: 0.5vw
-            
           #grade
             font-size: 1vw
-            //line-height: 1.2vw
-            padding-bottom: 0.2vw
+            line-height: 1.2vw
           
           input
-            font-size: 0.8vw
-            text-align: center
-            width: 5.5vw
+            width: 6vw
             border-radius: 3vw
             outline: none
             border: none
-            padding: 0.3vw 0.7vw 0.3vw 0.7vw
+            padding: 0.3vw 0 0.3vw 1vw
+
             background-color: var(--background-color-field)
           input::placeholder
-            font-size: 1vw
-            width: 5vw
+            font-size: 0.8vw
       
       #description-tag
         display: flex
@@ -261,8 +256,6 @@ footer
             color: #555555
             
             
-          .tag-style:hover
-            background-color: #FFAD94
             
           .tag-style
             position: relative
@@ -282,15 +275,16 @@ footer
               background-color: #FFCFBF
               border-radius: 1vw
               z-index: 4
-              width: 18vw
+              width: 20vw
               height: auto
               margin: 1vw
+              cursor: default
 
               #sendbutton
                 width: 2.5vw
                 height: 2.5vw
               
-              #tag-commend-send-region
+              #tag-comment-send-region
                 margin: 1vw
                 display: flex
                 flex-direction: row
@@ -304,27 +298,28 @@ footer
                   width: 7.5vw
                   background-color: #FFFFFF
 
-              #tag-commend-board
+              #tag-comment-board
                 background-color: #FFFFFF
                 margin: 0vw 1vw 1vw 1vw
                 border-radius: 0.75vw
 
-                .tagcmd-wrap
+                .tagcmt-wrap
                   display: flex
                   flex-direction: row
                   flex-wrap: nowrap
+                  justify-content: space-around
                   align-items: center
                   margin: 0.75vw
 
-                  #tagfrom
+                  #cmtfrom
                     background-color: #646464
                     width: 2.5vw
                     height: 2.5vw
                     border-radius: 50%
 
-                  #tagcmd-text
+                  #cmttext
                     background-color: #FFE4DC
-                    width: 11vw
+                    width: 80%
                     border-radius: 1vw
                 
 
@@ -461,18 +456,6 @@ footer
       justify-content: space-around
       align-items: flex-start
       
-      #friend-hover
-        display: none
-        position: absolute
-        //width: 14vw
-        //height: 5vw
-        padding: 1vw
-        border-radius: 0.5vw
-        background-color: yellow
-        
-        p
-          font-size: 1vw
-      
       .friend-img
         width: 3.2vw
         height: 3.2vw
@@ -560,8 +543,6 @@ footer
         border: solid 2px
         border-color: #75E1C7
         
-        content-visibility: auto
-        
       .cardleft
         display: flex
         flex-direction: column
@@ -585,9 +566,6 @@ footer
           color: gray
           margin-top: 1.5vw
           
-        .detail
-          margin: 1vw
-          font-size: 1vw
       
       .cardright
         display: flex
@@ -690,18 +668,6 @@ footer
                 width: 12vw
                 margin: 0.1vw 1.2vw 0 1vw
                 color: #333333
-        #event-comment-insert
-          position: absolute
-          bottom: 2vw
-          display: flex
-          flex-direction: row;
-          align-items: center;
-          justify-content: space-between;
-          
-          .event-comment-text
-            width: 15vw
-          .event-comment-btn
-            
 
     #personal-title
       font-size: 1.6vw
