--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -41,12 +41,6 @@
   /*UpLeft/UR/DR/DL
   z-index: 6
   
-  #clickfilter
-    display: none
-    position: fixed
-    width: 100%
-    height: 100%
-    z-index: -1
   
   #loadingfilter
     display: block
@@ -209,9 +203,10 @@ a
       top: 0
       right: 8vw
       background-color: #FAFAFA
-      opacity: 0.95
+      //opacity: 0.95
       
       border-radius: 2vw
+      border: solid 2px #CCC
       
       #noticeheading
         font-size: 2.5vw
